fix không validate URL